--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "next": "14.0.3",
     "next-auth": "^5.0.0-beta.4",
     "react": "^18",
